# beli-tool

./: .gitignore  README.md  SETUP.md  beli-tool.spec  config.example.toml  pyproject.toml
.github/workflows/: release.yml
docs/: index.html
docs/superpowers/plans/: 2026-06-27-beli-staging-tool.md
docs/superpowers/specs/: 2026-06-27-beli-staging-tool-design.md
packaging/: app_entry.py
src/beli_tool/: __init__.py  cli.py  clustering.py  config.py  ledger.py  logsetup.py  maps_collector.py  matcher.py  models.py  obsidian_log.py  osm_client.py  photos_collector.py  photos_source.py  pipeline.py  places_cache.py  places_client.py  webapp.py
src/beli_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/beli_tool/templates/: index.html
tests/: test_cli.py  test_clustering.py  test_config.py  test_ledger.py  test_ledger_backup.py  test_logsetup.py  test_maps_collector.py  test_matcher.py  test_models.py  test_obsidian_log.py  test_osm_client.py  test_photos_collector.py  test_photos_source.py  test_pipeline.py  test_places_cache.py  test_places_client.py  test_webapp.py
tests/fixtures/: Want to go.csv
