[project]
name = "beli-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "osxphotos>=0.68",
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
beli-tool = "beli_tool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
