[project]
name = "beli-tool"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "osxphotos>=0.68",
  "httpx>=0.27",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
beli-tool = "beli_tool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
beli_tool = ["templates/*.html"]
